objects/My_Copado_Task__c.object
<CustomObject>
    <description>This is for private tasks in Copado</description>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academy</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Is_Parent_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Parent Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>My_Parent_Copado_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>My Parent Copado Task</label>
        <referenceTo>My_Copado_Task__c</referenceTo>
        <relationshipLabel>My Child Copado Tasks</relationshipLabel>
        <relationshipName>My_Copado_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1 - High</fullName>
                </value>
                <value>
                    <fullName>2 - Medium</fullName>
                </value>
                <value>
                    <fullName>3 - Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>My Copado Task</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Department__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_pendings</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>All pendings</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Customer_Success</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Completed_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Academy,Support,Success,Services</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>2/1/2019 12:00 AM</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </filters>
        <label>Customer Success</label>
        <sharedTo>
            <roleAndSubordinates>SVP_Growth</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_pendings</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Cancelled</value>
        </filters>
        <label>My pendings</label>
    </listViews>
    <listViews>
        <fullName>Recently_Updated</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Priority__c</columns>
        <columns>Status__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>LAST_N_DAYS:10</value>
        </filters>
        <label>Recently Updated</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>My Copado Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Copado Tasks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>